--- a/src/styles.css
+++ b/src/styles.css
@@ -22,6 +22,7 @@ a {
 
 a:hover {
     color: rgb(6, 0, 119);
+    cursor: pointer;
 }
 
 img {
@@ -51,11 +52,29 @@ header .header-content {
     display: flex;
     justify-content: center;
     padding: 20px;
+ 
 }
   
   
 .social-button .button {
-    background: #ddd;
+    padding: 15px;
+    font-size: 28px;
+    transition: 0.2s;
+    color: #FFF;
 }
 
-  
+.linkedin:hover {
+    background: #0077b5;
+}
+
+.github:hover {
+    background: #6e5494;
+}
+
+.codepen {
+    color: #212121;
+}
+
+.codepen:hover {
+    background: #212121;
+}
